sdk/v0.6.2/video.mdx
---
title: "video"
icon: "square-m"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/functions/video.py#L0\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
noindex: true
---
# <span style={{ 'color': 'gray' }}>module</span>&nbsp; pixeltable.functions.video


Pixeltable UDFs for `VideoType`.


## <span style={{ 'color': 'gray' }}>iterator</span>&nbsp; frame_iterator()

```python Signature
@pxt.iterator
frame_iterator(
    video: pxt.Video,
    *,
    fps: pxt.Float | None = None,
    num_frames: pxt.Int | None = None,
    keyframes_only: pxt.Bool = False
)
```

Iterator over frames of a video. At most one of `fps`, `num_frames` or `keyframes_only` may be specified. If `fps`
is specified, then frames will be extracted at the specified rate (frames per second). If `num_frames` is specified,
then the exact number of frames will be extracted. If neither is specified, then all frames will be extracted.

__Outputs:__

One row per extracted frame, with the following columns:

- `frame` (`pxt.Image`): The extracted video frame
- `frame_attrs` (`pxt.Json`): A dictionary containing the following attributes (for more information,
    see `pyav`'s documentation on
    [VideoFrame](https://pyav.org/docs/develop/api/video.html#module-av.video.frame) and
    [Frame](https://pyav.org/docs/develop/api/frame.html)):

        * `index` (`int`): The index of the frame in the video stream
        * `pts` (`int | None`): The presentation timestamp of the frame
        * `dts` (`int | None`): The decoding timestamp of the frame
        * `time` (`float | None`): The timestamp of the frame in seconds
        * `is_corrupt` (`bool`): `True` if the frame is corrupt
        * `key_frame` (`bool`): `True` if the frame is a keyframe
        * `pict_type` (`int`): The picture type of the frame
        * `interlaced_frame` (`bool`): `True` if the frame is interlaced

**Parameters:**

- **`fps`** (`pxt.Float | None`): Number of frames to extract per second of video. This may be a fractional value, such as 0.5.
    If omitted, or if greater than the native framerate of the video,
    then the framerate of the video will be used (all frames will be extracted).
- **`num_frames`** (`pxt.Int | None`): Exact number of frames to extract. The frames will be spaced as evenly as possible. If
    `num_frames` is greater than the number of frames in the video, all frames will be extracted.
- **`keyframes_only`** (`pxt.Bool`): If True, only extract keyframes.

**Examples:**

All these examples assume an existing table `tbl` with a column `video` of type `pxt.Video`.

Create a view that extracts all frames from all videos:

```python
pxt.create_view('all_frames', tbl, iterator=frame_iterator(tbl.video))
```

Create a view that extracts only keyframes from all videos:

```python
pxt.create_view(
    'keyframes',
    tbl,
    iterator=frame_iterator(tbl.video, keyframes_only=True),
)
```

Create a view that extracts frames from all videos at a rate of 1 frame per second:

```python
pxt.create_view(
    'one_fps_frames', tbl, iterator=frame_iterator(tbl.video, fps=1.0)
)
```

Create a view that extracts exactly 10 frames from each video:

```python
pxt.create_view(
    'ten_frames', tbl, iterator=frame_iterator(tbl.video, num_frames=10)
)
```


## <span style={{ 'color': 'gray' }}>iterator</span>&nbsp; video_splitter()

```python Signature
@pxt.iterator
video_splitter(
    video: pxt.Video,
    *,
    duration: pxt.Float | None = None,
    overlap: pxt.Float | None = None,
    min_segment_duration: pxt.Float | None = None,
    segment_times: pxt.Json[(Float = None, mode: pxt.String = 'accurate', video_encoder: pxt.String | None = None, video_encoder_args: pxt.Json | None = None
)
```

Iterator over segments of a video file, which is split into segments. The segments are specified either via a
fixed duration or a list of split points.

**Parameters:**

- **`duration`** (`pxt.Float | None`): Video segment duration in seconds
- **`overlap`** (`pxt.Float | None`): Overlap between consecutive segments in seconds. Only available for `mode='fast'`.
- **`min_segment_duration`** (`pxt.Float | None`): Drop the last segment if it is smaller than min_segment_duration.
- **`segment_times`** (`pxt.Json[(Float`): List of timestamps (in seconds) in video where segments should be split. Note that these are not
    segment durations. If all segment times are less than the duration of the video, produces exactly
    `len(segment_times) + 1` segments. An argument of `[]` will produce a single segment containing the
    entire video.
- **`mode`** (`Any`): Segmentation mode:
    - `'fast'`: Quick segmentation using stream copy (splits only at keyframes, approximate durations)
    - `'accurate'`: Precise segmentation with re-encoding (exact durations, slower)
- **`video_encoder`** (`Any`): Video encoder to use. If not specified, uses the default encoder for the current platform.
    Only available for `mode='accurate'`.
- **`video_encoder_args`** (`Any`): Additional arguments to pass to the video encoder. Only available for `mode='accurate'`.

**Examples:**

All these examples assume an existing table `tbl` with a column `video` of type `pxt.Video`.

Create a view that splits each video into 10-second segments:

```python
pxt.create_view(
    'ten_second_segments',
    tbl,
    iterator=video_splitter(tbl.video, duration=10.0),
)
```

Create a view that splits each video into segments at specified fixed times:

```python
split_times = [5.0, 15.0, 30.0]
pxt.create_view(
    'custom_segments',
    tbl,
    iterator=video_splitter(tbl.video, segment_times=split_times),
)
```

Create a view that splits each video into segments at times specified by a column `split_times` of type
`pxt.Json`, containing a list of timestamps in seconds:

```python
pxt.create_view(
    'custom_segments',
    tbl,
    iterator=video_splitter(tbl.video, segment_times=tbl.split_times),
)
```


## <span style={{ 'color': 'gray' }}>uda</span>&nbsp; concat_videos_agg()

```python Signature
@pxt.uda
concat_videos_agg(*args, **kwargs) -> pxt.Video | None
```

Aggregate function that merges videos into a single video.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH
- All videos must have the same resolution

**Parameters:**

- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video | None`: A new video containing all input videos concatenated in order, or None if all inputs are None.

**Examples:**

Concatenate all videos in a table, ordered by timestamp:

```python
tbl.select(concat_videos_agg(tbl.timestamp, tbl.video)).collect()
```


## <span style={{ 'color': 'gray' }}>uda</span>&nbsp; make_video()

```python Signature
@pxt.uda
make_video(*args, **kwargs) -> pxt.Video
```

Aggregate function that creates a video from a sequence of images, using the default video encoder and
yuv420p pixel format.

**Parameters:**

- **`fps`** (`pxt.Int`): Frames per second for the output video.

**Returns:**

- `pxt.Video`: The video obtained by combining the input frames at the specified `fps`.

**Examples:**

Combine the images in the `img` column of the table `tbl` into a video:

```python
tbl.select(make_video(tbl.img, fps=30)).collect()
```

Combine a sequence of rotated images into a video:

```python
tbl.select(make_video(tbl.img.rotate(45), fps=30)).collect()
```

For a more extensive example, see the
[Object Detection in Videos](https://docs.pixeltable.com/howto/cookbooks/video/object-detection-in-videos)
cookbook.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; clip()

```python Signature
@pxt.udf
clip(
    video: pxt.Video,
    *,
    start_time: pxt.Float,
    end_time: pxt.Float | None = None,
    duration: pxt.Float | None = None,
    mode: pxt.String = 'accurate',
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video | None
```

Extract a clip from a video, specified by `start_time` and either `end_time` or `duration` (in seconds).

If `start_time` is beyond the end of the video, returns None. Can only specify one of `end_time` and `duration`.
If both `end_time` and `duration` are None, the clip goes to the end of the video.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video file
- **`start_time`** (`pxt.Float`): Start time in seconds
- **`end_time`** (`pxt.Float | None`): End time in seconds
- **`duration`** (`pxt.Float | None`): Duration of the clip in seconds
- **`mode`** (`pxt.String`): Clip mode:
    - `'fast'`: avoids re-encoding but starts the clip at the nearest keyframes and as a result, the clip
        duration will be slightly longer than requested
    - `'accurate'`: extracts a frame-accurate clip, but requires re-encoding
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
    Only available for `mode='accurate'`.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder. Only available for `mode='accurate'`.

**Returns:**

- `pxt.Video | None`: New video containing only the specified time range or None if start_time is beyond the end of the video.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; concat_videos()

```python Signature
@pxt.udf
concat_videos(videos: pxt.Json[(Video, *, video_encoder: pxt.String | None = None, video_encoder_args: pxt.Json | None = None) -> pxt.Video | None
```

Merge multiple videos into a single video.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`videos`** (`pxt.Json[(Video`): List of videos to merge.
- **`video_encoder`** (`Any`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`Any`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video | None`: A new video containing the merged videos, or None if the input list is empty.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; crop()

```python Signature
@pxt.udf
crop(
    video: pxt.Video,
    bbox: pxt.Json[(Int, *, bbox_format: pxt.String = 'xywh', video_encoder: pxt.String | None = None, video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Crop a rectangular region from a video using ffmpeg's crop filter.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`bbox`** (`pxt.Json[(Int`): Crop region as a list of 4 integers.
- **`bbox_format`** (`Any`): Format of the `bbox` coordinates:
    - `'xyxy'`: `[x1, y1, x2, y2]` where (x1, y1) is top-left and (x2, y2) is bottom-right
    - `'xywh'`: `[x, y, width, height]` where (x, y) is top-left corner
    - `'cxcywh'`: `[cx, cy, width, height]` where (cx, cy) is the center
- **`video_encoder`** (`Any`): Video encoder to use. If not specified, uses the default encoder.
- **`video_encoder_args`** (`Any`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: Video containing the cropped region.

**Examples:**

Crop using default xywh format:

```python
tbl.select(tbl.video.crop2([100, 50, 320, 240])).collect()
```

Crop using xyxy format (common in object detection):

```python
tbl.select(
    tbl.video.crop2([100, 50, 420, 290], bbox_format='xyxy')
).collect()
```

Crop using center format:

```python
tbl.select(
    tbl.video.crop2([260, 170, 320, 240], bbox_format='cxcywh')
).collect()
```

Use with yolox object detection output:

```python
tbl.add_computed_column(
    cropped=tbl.video.crop2(tbl.detections.bboxes[0], bbox_format='xyxy')
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; extract_audio()

```python Signature
@pxt.udf
extract_audio(
    video_path: pxt.Video,
    stream_idx: pxt.Int = 0,
    format: pxt.String = 'wav',
    codec: pxt.String | None = None
) -> pxt.Audio
```

Extract an audio stream from a video.


**Parameters:**

- **`stream_idx`** (`pxt.Int`): Index of the audio stream to extract.
- **`format`** (`pxt.String`): The target audio format. (`'wav'`, `'mp3'`, `'flac'`).
- **`codec`** (`pxt.String | None`): The codec to use for the audio stream. If not provided, a default codec will be used.

**Returns:**

- `pxt.Audio`: The extracted audio.

**Examples:**

Add a computed column to a table `tbl` that extracts audio from an existing column `video_col`:

```python
tbl.add_computed_column(
    extracted_audio=tbl.video_col.extract_audio(format='flac')
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; extract_frame()

```python Signature
@pxt.udf
extract_frame(
    video: pxt.Video,
    *,
    timestamp: pxt.Float
) -> pxt.Image | None
```

Extract a single frame from a video at a specific timestamp.


**Parameters:**

- **`video`** (`pxt.Video`): The video from which to extract the frame.
- **`timestamp`** (`pxt.Float`): Extract frame at this timestamp (in seconds).

**Returns:**

- `pxt.Image | None`: The extracted frame as a PIL Image, or None if the timestamp is beyond the video duration.

**Examples:**

Extract the first frame from each video in the `video` column of the table `tbl`:

```python
tbl.select(tbl.video.extract_frame(0.0)).collect()
```

Extract a frame close to the end of each video in the `video` column of the table `tbl`:

```python
tbl.select(
    tbl.video.extract_frame(
        tbl.video.get_metadata().streams[0].duration_seconds - 0.1
    )
).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; fade_in()

```python Signature
@pxt.udf
fade_in(
    video: pxt.Video,
    *,
    duration: pxt.Float = 1.0,
    color: pxt.String = 'black',
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Apply a fade-in effect from a solid color at the start of a video using ffmpeg's fade filter.
The video transitions from a solid `color` to the full video content over `duration` seconds.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`duration`** (`pxt.Float`): Duration of the fade-in effect in seconds.
- **`color`** (`pxt.String`): Color to fade from (e.g., `'black'`, `'white'`, `'#FF0000'`).
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A new video with the fade-in effect applied.

**Examples:**

Apply a 1-second fade from black (default):

```python
tbl.select(tbl.video.fade_in()).collect()
```

Apply a 2-second fade from white:

```python
tbl.select(tbl.video.fade_in(duration=2.0, color='white')).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; fade_out()

```python Signature
@pxt.udf
fade_out(
    video: pxt.Video,
    *,
    duration: pxt.Float = 1.0,
    color: pxt.String = 'black',
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Apply a fade-out effect to a solid color at the end of a video using ffmpeg's fade filter.
The video transitions from the full video content to a solid `color` over the final `duration` seconds.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`duration`** (`pxt.Float`): Duration of the fade-out effect in seconds.
- **`color`** (`pxt.String`): Color to fade to (e.g., `'black'`, `'white'`, `'#FF0000'`).
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A new video with the fade-out effect applied.

**Examples:**

Apply a 1-second fade to black (default):

```python
tbl.select(tbl.video.fade_out()).collect()
```

Apply a 3-second fade to white:

```python
tbl.select(tbl.video.fade_out(duration=3.0, color='white')).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; get_duration()

```python Signature
@pxt.udf
get_duration(video: pxt.Video) -> pxt.Float | None
```

Get video duration in seconds.


**Parameters:**

- **`video`** (`pxt.Video`): The video for which to get the duration.

**Returns:**

- `pxt.Float | None`: The duration in seconds, or None if the duration cannot be determined.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; get_metadata()

```python Signature
@pxt.udf
get_metadata(video: pxt.Video) -> pxt.Json
```

Gets various metadata associated with a video file and returns it as a dictionary.


**Parameters:**

- **`video`** (`pxt.Video`): The video for which to get metadata.

**Returns:**

- `pxt.Json`: A `dict` such as the following:
  ```json
  {
      'bit_exact': False,
      'bit_rate': 967260,
      'size': 2234371,
      'metadata': {
          'encoder': 'Lavf60.16.100',
          'major_brand': 'isom',
          'minor_version': '512',
          'compatible_brands': 'isomiso2avc1mp41',
      },
      'streams': [
          {
              'type': 'video',
              'width': 640,
              'height': 360,
              'frames': 462,
              'time_base': 1.0 / 12800,
              'duration': 236544,
              'duration_seconds': 236544.0 / 12800,
              'average_rate': 25.0,
              'base_rate': 25.0,
              'guessed_rate': 25.0,
              'metadata': {
                  'language': 'und',
                  'handler_name': 'L-SMASH Video Handler',
                  'vendor_id': '[0][0][0][0]',
                  'encoder': 'Lavc60.31.102 libx264',
              },
              'codec_context': {'name': 'h264', 'codec_tag': 'avc1', 'profile': 'High', 'pix_fmt': 'yuv420p'},
          }
      ],
  }
  ```

**Examples:**

Extract metadata for files in the `video_col` column of the table `tbl`:

```python
tbl.select(tbl.video_col.get_metadata()).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; grayscale()

```python Signature
@pxt.udf
grayscale(
    video: pxt.Video,
    *,
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Convert a video to grayscale

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A grayscale version of the video.

**Examples:**

```python
tbl.select(tbl.video.grayscale()).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; mirror_x()

```python Signature
@pxt.udf
mirror_x(
    video: pxt.Video,
    *,
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Flip a video horizontally using ffmpeg's hflip filter.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A horizontally flipped video.

**Examples:**

```python
tbl.select(tbl.video.mirror_x()).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; mirror_y()

```python Signature
@pxt.udf
mirror_y(
    video: pxt.Video,
    *,
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Flip a video vertically using ffmpeg's vflip filter.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A vertically flipped video.

**Examples:**

```python
tbl.select(tbl.video.mirror_y()).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; mix_audio()

```python Signature
@pxt.udf
mix_audio(
    video: pxt.Video,
    audio: pxt.Audio,
    *,
    audio_volume: pxt.Float = 1.0,
    original_volume: pxt.Float = 1.0,
    audio_start_time: pxt.Float = 0.0,
    mix_duration: pxt.String = 'longest',
    normalize: pxt.Bool = False,
    dropout_transition: pxt.Float = 2.0,
    align_to_video: pxt.String = 'trim',
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Mix an audio track into a video's existing audio, blending both tracks together. Volume levels for each track can
be controlled independently.

__Requirements:__
- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video (must have an existing audio stream).
- **`audio`** (`pxt.Audio`): Audio track to mix in.
- **`audio_volume`** (`pxt.Float`): Volume multiplier for the added audio track. 1.0 is original volume.
- **`original_volume`** (`pxt.Float`): Volume multiplier for the video's existing audio track. 1.0 is original volume.
- **`audio_start_time`** (`pxt.Float`): Time in seconds at which the added audio begins playing in the output.
- **`mix_duration`** (`pxt.String`): Controls which input determines the length of the mixed audio stream.
    - `"longest"`: the mix runs until the longer of the two audio inputs ends. Use
      this when the added audio (e.g. a music bed) is longer than the video's original audio.
    - `"first"`: the mix ends when the video's original audio track ends. Useful when the
      original audio and video streams are the same length.
    - `"shortest"`: the mix ends when the shorter input ends, truncating whichever track is longer.
- **`normalize`** (`pxt.Bool`): If `True`, ffmpeg scales the mixed output to prevent clipping by dividing each track's
    contribution by the number of inputs. Defaults to `False` so that `audio_volume` and
    `original_volume` mean what they say; flip on if you are not setting volumes explicitly and
    want automatic clip protection.
- **`dropout_transition`** (`pxt.Float`): Duration in seconds over which a track's contribution fades to zero after
    it ends, preventing audible clicks at hard boundaries. Defaults to 2.0 seconds, matching
    ffmpeg's own default. Set to 0.0 to disable. Relevant whenever one input ends before
    the mixed output ends, regardless of which `mix_duration` mode is selected.
- **`align_to_video`** (`pxt.String`): Post-mix adjustment to align the output audio stream with the video stream duration.
    Applied after `amix`, so it is independent of `mix_duration`.

    - `"trim"`: if the mixed audio is longer than the video stream, truncate it to
      match. Pairs naturally with `mix_duration="longest"` for music-bed workflows.
    - `"none"`: no adjustment; output audio duration is whatever `amix` produces.
    - `"pad"`: if the mixed audio is shorter than the video stream, extend it with silence. Also
      trims to the video duration if the mix runs long.
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A new video with both audio tracks mixed together.

**Examples:**

Add background music at 30% volume. With the defaults, this lays the music as a bed under the
video: `mix_duration="longest"` keeps the music playing past the end of the original audio,
`align_to_video="trim"` caps the result at the video stream duration, and `normalize=False`
means the `audio_volume=0.3` setting is taken at face value rather than halved by `amix`:

```python
tbl.select(tbl.video.mix_audio(tbl.music, audio_volume=0.3)).collect()
```

Mix audio starting at second 5, with the original audio reduced:

```python
tbl.select(
    tbl.video.mix_audio(
        tbl.music,
        audio_volume=0.5,
        original_volume=0.7,
        audio_start_time=5.0,
    )
).collect()
```

Pad a short ambient track with silence so the audio stream matches the full video length:

```python
tbl.select(
    tbl.video.mix_audio(
        tbl.ambient, audio_volume=0.6, align_to_video='pad'
    )
).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; overlay_image()

```python Signature
@pxt.udf
overlay_image(
    video: pxt.Video,
    image: pxt.Image,
    *,
    horizontal_align: pxt.String = 'center',
    horizontal_margin: pxt.Int = 0,
    vertical_align: pxt.String = 'center',
    vertical_margin: pxt.Int = 0,
    scale: pxt.Float | None = None,
    opacity: pxt.Float = 1.0,
    start_time: pxt.Float | None = None,
    end_time: pxt.Float | None = None,
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Overlay an image on a video with customizable positioning, scaling, opacity, and timing.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video to overlay the image on.
- **`image`** (`pxt.Image`): Image to overlay.
- **`horizontal_align`** (`pxt.String`): Horizontal alignment of the overlay (`'left'`, `'center'`, `'right'`).
- **`horizontal_margin`** (`pxt.Int`): Horizontal margin in pixels from the alignment edge.
- **`vertical_align`** (`pxt.String`): Vertical alignment of the overlay (`'top'`, `'center'`, `'bottom'`).
- **`vertical_margin`** (`pxt.Int`): Vertical margin in pixels from the alignment edge.
- **`scale`** (`pxt.Float | None`): Scale factor for the overlay image relative to the video height. For example, 0.1 scales the
    image to 10% of the video height while preserving aspect ratio. If None, uses the original size.
- **`opacity`** (`pxt.Float`): Overlay opacity from 0.0 (transparent) to 1.0 (opaque).
- **`start_time`** (`pxt.Float | None`): Time in seconds when the overlay appears. If None, the overlay is visible from the start.
- **`end_time`** (`pxt.Float | None`): Time in seconds when the overlay disappears. If None, the overlay is visible until the end.
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A new video with the image overlay applied.

**Examples:**

Add a logo to the top-right corner:

```python
tbl.select(
    tbl.video.overlay_image(
        tbl.logo_img, horizontal_align='right', vertical_align='top'
    )
).collect()
```

Add a watermark at 50% opacity, scaled to 10% of video height:

```python
tbl.select(
    tbl.video.overlay_image(tbl.watermark_img, scale=0.1, opacity=0.5)
).collect()
```

Show an image only between seconds 2 and 8:

```python
tbl.select(
    tbl.video.overlay_image(
        tbl.img, start_time=2.0, end_time=8.0, horizontal_align='right'
    )
).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; overlay_text()

```python Signature
@pxt.udf
overlay_text(
    video: pxt.Video,
    text: pxt.String,
    *,
    font: pxt.String | None = None,
    font_size: pxt.Int = 24,
    line_spacing: pxt.Int = 0,
    color: pxt.String = 'white',
    opacity: pxt.Float = 1.0,
    horizontal_align: pxt.String = 'center',
    horizontal_margin: pxt.Int = 0,
    vertical_align: pxt.String = 'center',
    vertical_margin: pxt.Int = 0,
    box: pxt.Bool = False,
    box_color: pxt.String = 'black',
    box_opacity: pxt.Float = 1.0,
    box_border: pxt.Json[(Int = None, start_time: pxt.Float | None = None, end_time: pxt.Float | None = None, video_encoder: pxt.String | None = None, video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Overlay text on a video with customizable positioning and styling.

__Requirements:__

    - `ffmpeg` needs to be installed and in PATH

    Args:
        video: Input video to overlay text on.
        text: The text string to overlay on the video.
        font: Font family or path to font file. If None, uses the system default.
        font_size: Size of the text in points.
        line_spacing: Pixels of vertical space added between lines of multi-line text (text containing
            `
`). Defaults to 0. Negative values pull lines closer together for tighter packing.
            Ignored for single-line text.
        color: Text color (e.g., `'white'`, `'red'`, `'#FF0000'`).
        opacity: Text opacity from 0.0 (transparent) to 1.0 (opaque).
        horizontal_align: Horizontal text alignment (`'left'`, `'center'`, `'right'`).
        horizontal_margin: Horizontal margin in pixels from the alignment edge.
        vertical_align: Vertical text alignment (`'top'`, `'center'`, `'bottom'`).
        vertical_margin: Vertical margin in pixels from the alignment edge.
        box: Whether to draw a background box behind the text.
        box_color: Background box color as a string.
        box_opacity: Background box opacity from 0.0 to 1.0.
        box_border: Padding around text in the box in pixels.

            - `[10]`: 10 pixels on all sides
            - `[10, 20]`: 10 pixels on top/bottom, 20 on left/right
            - `[10, 20, 30]`: 10 pixels on top, 20 on left/right, 30 on bottom
            - `[10, 20, 30, 40]`: 10 pixels on top, 20 on right, 30 on bottom, 40 on left
        start_time: Time in seconds when the text appears. If None, the text is visible from the start.
        end_time: Time in seconds when the text disappears. If None, the text is visible until the end.
        video_encoder: Video encoder to use. If not specified, uses the default encoder.
        video_encoder_args: Additional arguments to pass to the video encoder.

    Returns:
        A new video with the text overlay applied.

    Examples:
        Add a simple text overlay to videos in a table:

```python
tbl.select(tbl.video.overlay_text('Sample Text')).collect()
```

        Add a YouTube-style caption:

```python
tbl.select(
    tbl.video.overlay_text(
        'Caption text',
        font_size=32,
        color='white',
        opacity=1.0,
        box=True,
        box_color='black',
        box_opacity=0.8,
        box_border=[6, 14],
        horizontal_margin=10,
        vertical_align='bottom',
        vertical_margin=70,
    )
).collect()
```

        Add text with a semi-transparent background box:

```python
tbl.select(
    tbl.video.overlay_text(
        'Important Message',
        font_size=32,
        color='yellow',
        box=True,
        box_color='black',
        box_opacity=0.6,
        box_border=[20, 10],
    )
).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; pan()

```python Signature
@pxt.udf
pan(*args, **kwargs) -> pxt.Video | None
```

A parameterized expression from which an executable Expr is created with a function call.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; resize()

```python Signature
@pxt.udf
resize(
    video: pxt.Video,
    *,
    width: pxt.Int | None = None,
    height: pxt.Int | None = None,
    scale: pxt.Float | None = None,
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Resize a video using ffmpeg's scale filter.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`width`** (`pxt.Int | None`): Width of the output video. Maintains the existing aspect ratio if no `height` is provided.
- **`height`** (`pxt.Int | None`): Height of the output video. Maintains the existing aspect ratio if no `width` is provided.
- **`scale`** (`pxt.Float | None`): Scale factor. Mutually exclusive with `width` and `height`.
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: The resized video.

**Examples:**

Resize to a specific width, preserving aspect ratio:

```python
tbl.select(tbl.video.resize(width=640)).collect()
```

Resize to exact dimensions:

```python
tbl.select(tbl.video.resize(width=1280, height=720)).collect()
```

Scale down by half:

```python
tbl.select(tbl.video.resize(scale=0.5)).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; reverse()

```python Signature
@pxt.udf
reverse(
    video: pxt.Video,
    audio: pxt.String = 'drop',
    *,
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Reverse a video using ffmpeg's reverse filter.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`audio`** (`pxt.String`): Specifies what to do with audio streams
    - `'drop'`: drop the audio streams
    - `'reverse'`: also reverse the audio streams
    - `'keep'`: keep the audio streams
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: The reversed video.

**Examples:**

Reverse a video, dropping audio:

```python
tbl.select(tbl.video.reverse()).collect()
```

Reverse a video along with its audio:

```python
tbl.select(tbl.video.reverse(audio='reverse')).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; rotate()

```python Signature
@pxt.udf
rotate(
    video: pxt.Video,
    *,
    angle: pxt.Float,
    unit: pxt.String = 'deg',
    expand: pxt.Bool = False,
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Rotate a video by a fixed angle using ffmpeg's rotate filter.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`angle`** (`pxt.Float`): Rotation angle. Positive values rotate counter-clockwise.
- **`unit`** (`pxt.String`): Unit of the angle: `'deg'` for degrees or `'rad'` for radians.
- **`expand`** (`pxt.Bool`): If True, the output frame is enlarged to contain the entire rotated frame (no cropping).
    If False (default), the output frame keeps the original dimensions, cropping corners.
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A new video rotated by the specified angle.

**Examples:**

Rotate 90 degrees counter-clockwise:

```python
tbl.select(tbl.video.rotate(angle=90)).collect()
```

Rotate 45 degrees with frame expansion to avoid cropping:

```python
tbl.select(tbl.video.rotate(angle=45, expand=True)).collect()
```

Rotate by pi/2 radians:

```python
tbl.select(tbl.video.rotate(angle=1.5708, unit='rad')).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; scene_detect_adaptive()

```python Signature
@pxt.udf
scene_detect_adaptive(
    video: pxt.Video,
    *,
    fps: pxt.Float | None = None,
    adaptive_threshold: pxt.Float = 3.0,
    min_scene_len: pxt.Int = 15,
    window_width: pxt.Int = 2,
    min_content_val: pxt.Float = 15.0,
    delta_hue: pxt.Float = 1.0,
    delta_sat: pxt.Float = 1.0,
    delta_lum: pxt.Float = 1.0,
    delta_edges: pxt.Float = 0.0,
    luma_only: pxt.Bool = False,
    kernel_size: pxt.Int | None = None
) -> pxt.Json[(Json, ...)]
```

Detect scene cuts in a video using PySceneDetect's
[AdaptiveDetector](https://www.scenedetect.com/docs/latest/api/detectors.html#scenedetect.detectors.adaptive_detector.AdaptiveDetector).

__Requirements:__

- `pip install scenedetect`

**Parameters:**

- **`video`** (`pxt.Video`): The video to analyze for scene cuts.
- **`fps`** (`pxt.Float | None`): Number of frames to extract per second for analysis. If None or 0, analyzes all frames.
    Lower values process faster but may miss exact scene cuts.
- **`adaptive_threshold`** (`pxt.Float`): Threshold that the score ratio must exceed to trigger a new scene cut.
    Lower values will detect more scenes (more sensitive), higher values will detect fewer scenes.
- **`min_scene_len`** (`pxt.Int`): Once a cut is detected, this many frames must pass before a new one can be added to the scene
    list.
- **`window_width`** (`pxt.Int`): Size of window (number of frames) before and after each frame to average together in order to
    detect deviations from the mean. Must be at least 1.
- **`min_content_val`** (`pxt.Float`): Minimum threshold (float) that the content_val must exceed in order to register as a new scene.
    This is calculated the same way that `scene_detect_content()` calculates frame
    score based on weights/luma_only/kernel_size.
- **`delta_hue`** (`pxt.Float`): Weight for hue component changes. Higher values make hue changes more important.
- **`delta_sat`** (`pxt.Float`): Weight for saturation component changes. Higher values make saturation changes more important.
- **`delta_lum`** (`pxt.Float`): Weight for luminance component changes. Higher values make brightness changes more important.
- **`delta_edges`** (`pxt.Float`): Weight for edge detection changes. Higher values make edge changes more important.
    Edge detection can help detect cuts in scenes with similar colors but different content.
- **`luma_only`** (`pxt.Bool`): If True, only analyzes changes in the luminance (brightness) channel of the video,
    ignoring color information. This can be faster and may work better for grayscale content.
- **`kernel_size`** (`pxt.Int | None`): Size of kernel to use for post edge detection filtering. If None, automatically set based on video
    resolution.

**Returns:**

- `pxt.Json[(Json, ...)]`: A list of dictionaries, one for each detected scene, with the following keys:

  - `start_time` (float): The start time of the scene in seconds.
  - `start_pts` (int): The pts of the start of the scene.
  - `duration` (float): The duration of the scene in seconds.

  The list is ordered chronologically. Returns the full duration of the video if no scenes are detected.

**Examples:**

Detect scene cuts with default parameters:

```python
tbl.select(tbl.video.scene_detect_adaptive()).collect()
```

Detect more scenes by lowering the threshold:

```python
tbl.select(
    tbl.video.scene_detect_adaptive(adaptive_threshold=1.5)
).collect()
```

Use luminance-only detection with a longer minimum scene length:

```python
tbl.select(
    tbl.video.scene_detect_adaptive(luma_only=True, min_scene_len=30)
).collect()
```

Add scene cuts as a computed column:

```python
tbl.add_computed_column(
    scene_cuts=tbl.video.scene_detect_adaptive(adaptive_threshold=2.0)
)
```

Analyze at a lower frame rate for faster processing:

```python
tbl.select(tbl.video.scene_detect_adaptive(fps=2.0)).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; scene_detect_content()

```python Signature
@pxt.udf
scene_detect_content(
    video: pxt.Video,
    *,
    fps: pxt.Float | None = None,
    threshold: pxt.Float = 27.0,
    min_scene_len: pxt.Int = 15,
    delta_hue: pxt.Float = 1.0,
    delta_sat: pxt.Float = 1.0,
    delta_lum: pxt.Float = 1.0,
    delta_edges: pxt.Float = 0.0,
    luma_only: pxt.Bool = False,
    kernel_size: pxt.Int | None = None,
    filter_mode: pxt.String = 'merge'
) -> pxt.Json[(Json, ...)]
```

Detect scene cuts in a video using PySceneDetect's
[ContentDetector](https://www.scenedetect.com/docs/latest/api/detectors.html#scenedetect.detectors.content_detector.ContentDetector).

__Requirements:__

- `pip install scenedetect`

**Parameters:**

- **`video`** (`pxt.Video`): The video to analyze for scene cuts.
- **`fps`** (`pxt.Float | None`): Number of frames to extract per second for analysis. If None, analyzes all frames.
    Lower values process faster but may miss exact scene cuts.
- **`threshold`** (`pxt.Float`): Threshold that the weighted sum of component changes must exceed to trigger a scene cut.
    Lower values detect more scenes (more sensitive), higher values detect fewer scenes.
- **`min_scene_len`** (`pxt.Int`): Once a cut is detected, this many frames must pass before a new one can be added to the scene
    list.
- **`delta_hue`** (`pxt.Float`): Weight for hue component changes. Higher values make hue changes more important.
- **`delta_sat`** (`pxt.Float`): Weight for saturation component changes. Higher values make saturation changes more important.
- **`delta_lum`** (`pxt.Float`): Weight for luminance component changes. Higher values make brightness changes more important.
- **`delta_edges`** (`pxt.Float`): Weight for edge detection changes. Higher values make edge changes more important.
    Edge detection can help detect cuts in scenes with similar colors but different content.
- **`luma_only`** (`pxt.Bool`): If True, only analyzes changes in the luminance (brightness) channel,
    ignoring color information. This can be faster and may work better for grayscale content.
- **`kernel_size`** (`pxt.Int | None`): Size of kernel for expanding detected edges. Must be odd integer greater than or equal to 3. If
    None, automatically set using video resolution.
- **`filter_mode`** (`pxt.String`): How to handle fast cuts/flashes. 'merge' combines quick cuts, 'suppress' filters them out.

**Returns:**

- `pxt.Json[(Json, ...)]`: A list of dictionaries, one for each detected scene, with the following keys:

  - `start_time` (float): The start time of the scene in seconds.
  - `start_pts` (int): The pts of the start of the scene.
  - `duration` (float): The duration of the scene in seconds.

  The list is ordered chronologically. Returns the full duration of the video if no scenes are detected.

**Examples:**

Detect scene cuts with default parameters:

```python
tbl.select(tbl.video.scene_detect_content()).collect()
```

Detect more scenes by lowering the threshold:

```python
tbl.select(tbl.video.scene_detect_content(threshold=15.0)).collect()
```

Use luminance-only detection:

```python
tbl.select(tbl.video.scene_detect_content(luma_only=True)).collect()
```

Emphasize edge detection for scenes with similar colors:

```python
tbl.select(
    tbl.video.scene_detect_content(
        delta_edges=1.0, delta_hue=0.5, delta_sat=0.5
    )
).collect()
```

Add scene cuts as a computed column:

```python
tbl.add_computed_column(
    scene_cuts=tbl.video.scene_detect_content(threshold=20.0)
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; scene_detect_hash()

```python Signature
@pxt.udf
scene_detect_hash(
    video: pxt.Video,
    *,
    fps: pxt.Float | None = None,
    threshold: pxt.Float = 0.395,
    size: pxt.Int = 16,
    lowpass: pxt.Int = 2,
    min_scene_len: pxt.Int = 15
) -> pxt.Json[(Json, ...)]
```

Detect scene cuts in a video using PySceneDetect's
[HashDetector](https://www.scenedetect.com/docs/latest/api/detectors.html#scenedetect.detectors.hash_detector.HashDetector).

HashDetector uses perceptual hashing for very fast scene detection. It computes a hash of each
frame at reduced resolution and compares hash distances.

__Requirements:__

- `pip install scenedetect`

**Parameters:**

- **`video`** (`pxt.Video`): The video to analyze for scene cuts.
- **`fps`** (`pxt.Float | None`): Number of frames to extract per second for analysis. If None, analyzes all frames.
    Lower values process faster but may miss exact scene cuts.
- **`threshold`** (`pxt.Float`): Value from 0.0 and 1.0 representing the relative hamming distance between the perceptual hashes of
    adjacent frames. A distance of 0 means the image is the same, and 1 means no correlation. Smaller threshold
    values thus require more correlation, making the detector more sensitive. The Hamming distance is divided
    by size x size before comparing to threshold for normalization.
    Lower values detect more scenes (more sensitive), higher values detect fewer scenes.
- **`size`** (`pxt.Int`): Size of square of low frequency data to use for the DCT. Larger values are more precise but slower.
    Common values are 8, 16, or 32.
- **`lowpass`** (`pxt.Int`): How much high frequency information to filter from the DCT. A value of 2 means keep lower 1/2 of the
    frequency data, 4 means only keep 1/4, etc. Larger values make the
    detector less sensitive to high-frequency details and noise.
- **`min_scene_len`** (`pxt.Int`): Once a cut is detected, this many frames must pass before a new one can be added to the scene
    list.

**Returns:**

- `pxt.Json[(Json, ...)]`: A list of dictionaries, one for each detected scene, with the following keys:

  - `start_time` (float): The start time of the scene in seconds.
  - `start_pts` (int): The pts of the start of the scene.
  - `duration` (float): The duration of the scene in seconds.

  The list is ordered chronologically. Returns the full duration of the video if no scenes are detected.

**Examples:**

Detect scene cuts with default parameters:

```python
tbl.select(tbl.video.scene_detect_hash()).collect()
```

Detect more scenes by lowering the threshold:

```python
tbl.select(tbl.video.scene_detect_hash(threshold=0.3)).collect()
```

Use larger hash size for more precision:

```python
tbl.select(tbl.video.scene_detect_hash(size=32)).collect()
```

Use for fast processing with lower frame rate:

```python
tbl.select(tbl.video.scene_detect_hash(fps=1.0, threshold=0.4)).collect()
```

Add scene cuts as a computed column:

```python
tbl.add_computed_column(scene_cuts=tbl.video.scene_detect_hash())
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; scene_detect_histogram()

```python Signature
@pxt.udf
scene_detect_histogram(
    video: pxt.Video,
    *,
    fps: pxt.Float | None = None,
    threshold: pxt.Float = 0.05,
    bins: pxt.Int = 256,
    min_scene_len: pxt.Int = 15
) -> pxt.Json[(Json, ...)]
```

Detect scene cuts in a video using PySceneDetect's
[HistogramDetector](https://www.scenedetect.com/docs/latest/api/detectors.html#scenedetect.detectors.histogram_detector.HistogramDetector).

HistogramDetector compares frame histograms on the Y (luminance) channel after YUV conversion.
It detects scenes based on relative histogram differences and is more robust to gradual lighting
changes than content-based detection.

__Requirements:__

- `pip install scenedetect`

**Parameters:**

- **`video`** (`pxt.Video`): The video to analyze for scene cuts.
- **`fps`** (`pxt.Float | None`): Number of frames to extract per second for analysis. If None or 0, analyzes all frames.
    Lower values process faster but may miss exact scene cuts.
- **`threshold`** (`pxt.Float`): Maximum relative difference between 0.0 and 1.0 that the histograms can differ. Histograms are
    calculated on the Y channel after converting the frame to YUV, and normalized based on the number of bins.
    Higher differences imply greater change in content, so larger threshold values are less sensitive to cuts.
    Lower values detect more scenes (more sensitive), higher values detect fewer scenes.
- **`bins`** (`pxt.Int`): Number of bins to use for histogram calculation (typically 16-256). More bins provide
    finer granularity but may be more sensitive to noise.
- **`min_scene_len`** (`pxt.Int`): Once a cut is detected, this many frames must pass before a new one can be added to the scene
    list.

**Returns:**

- `pxt.Json[(Json, ...)]`: A list of dictionaries, one for each detected scene, with the following keys:

  - `start_time` (float): The start time of the scene in seconds.
  - `start_pts` (int): The pts of the start of the scene.
  - `duration` (float): The duration of the scene in seconds.

  The list is ordered chronologically. Returns the full duration of the video if no scenes are detected.

**Examples:**

Detect scene cuts with default parameters:

```python
tbl.select(tbl.video.scene_detect_histogram()).collect()
```

Detect more scenes by lowering the threshold:

```python
tbl.select(tbl.video.scene_detect_histogram(threshold=0.03)).collect()
```

Use fewer bins for faster processing:

```python
tbl.select(tbl.video.scene_detect_histogram(bins=64)).collect()
```

Use with a longer minimum scene length:

```python
tbl.select(tbl.video.scene_detect_histogram(min_scene_len=30)).collect()
```

Add scene cuts as a computed column:

```python
tbl.add_computed_column(
    scene_cuts=tbl.video.scene_detect_histogram(threshold=0.04)
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; scene_detect_threshold()

```python Signature
@pxt.udf
scene_detect_threshold(
    video: pxt.Video,
    *,
    fps: pxt.Float | None = None,
    threshold: pxt.Float = 12.0,
    min_scene_len: pxt.Int = 15,
    fade_bias: pxt.Float = 0.0,
    add_final_scene: pxt.Bool = False,
    method: pxt.String = 'floor'
) -> pxt.Json[(Json, ...)]
```

Detect fade-in and fade-out transitions in a video using PySceneDetect's
[ThresholdDetector](https://www.scenedetect.com/docs/latest/api/detectors.html#scenedetect.detectors.threshold_detector.ThresholdDetector).

ThresholdDetector identifies scenes by detecting when pixel brightness falls below or rises above
a threshold value, suitable for detecting fade-to-black, fade-to-white, and similar transitions.

__Requirements:__

- `pip install scenedetect`

**Parameters:**

- **`video`** (`pxt.Video`): The video to analyze for fade transitions.
- **`fps`** (`pxt.Float | None`): Number of frames to extract per second for analysis. If None or 0, analyzes all frames.
    Lower values process faster but may miss exact transition points.
- **`threshold`** (`pxt.Float`): 8-bit intensity value that each pixel value (R, G, and B) must be less than or equal to in order
    to trigger a fade in/out.
- **`min_scene_len`** (`pxt.Int`): Once a cut is detected, this many frames must pass before a new one can be added to the scene
    list.
- **`fade_bias`** (`pxt.Float`): Float between -1.0 and +1.0 representing the percentage of timecode skew for the start of a scene
    (-1.0 causing a cut at the fade-to-black, 0.0 in the middle, and +1.0 causing the cut to be right at the
    position where the threshold is passed).
- **`add_final_scene`** (`pxt.Bool`): Boolean indicating if the video ends on a fade-out to generate an additional scene at this
    timecode.
- **`method`** (`pxt.String`): How to treat threshold when detecting fade events
    - 'ceiling': Fade out happens when frame brightness rises above threshold.
    - 'floor': Fade out happens when frame brightness falls below threshold.

**Returns:**

- `pxt.Json[(Json, ...)]`: A list of dictionaries, one for each detected scene, with the following keys:

  - `start_time` (float): The start time of the scene in seconds.
  - `start_pts` (int): The pts of the start of the scene.
  - `duration` (float): The duration of the scene in seconds.

  The list is ordered chronologically. Returns the full duration of the video if no scenes are detected.

**Examples:**

Detect fade-to-black transitions with default parameters:

```python
tbl.select(tbl.video.scene_detect_threshold()).collect()
```

Use a lower threshold to detect darker fades:

```python
tbl.select(tbl.video.scene_detect_threshold(threshold=8.0)).collect()
```

Detect both fade-to-black and fade-to-white using absolute method:

```python
tbl.select(tbl.video.scene_detect_threshold(method='absolute')).collect()
```

Add final scene boundary:

```python
tbl.select(
    tbl.video.scene_detect_threshold(add_final_scene=True)
).collect()
```

Add fade transitions as a computed column:

```python
tbl.add_computed_column(
    fade_cuts=tbl.video.scene_detect_threshold(threshold=15.0)
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; scroll()

```python Signature
@pxt.udf
scroll(
    video: pxt.Video,
    *,
    w: pxt.Int | None = None,
    h: pxt.Int | None = None,
    x_speed: pxt.Float = 0,
    y_speed: pxt.Float = 0,
    x_start: pxt.Int = 0,
    y_start: pxt.Int = 0,
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Apply a scrolling viewport effect to a video using ffmpeg's crop filter.

Extracts a viewport of size `w` x `h` from each frame, starting at position (`x_start`, `y_start`) and moving
at (`x_speed`, `y_speed`) pixels per second. The viewport clamps at the frame edges: once it reaches a boundary,
it stops moving and the remaining frames show a static crop.

At least one of `w` or `h` must be smaller than the input dimensions for the effect to be visible.

The clip duration is unchanged. To pan across the full available range, set
`x_speed = (input_width - w) / duration`.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`w`** (`pxt.Int | None`): Width of the output viewport in pixels. If None, uses the input width.
- **`h`** (`pxt.Int | None`): Height of the output viewport in pixels. If None, uses the input height.
- **`x_speed`** (`pxt.Float`): Horizontal scroll speed in pixels per second. Positive values scroll rightward (the viewport moves
    right, revealing content to the right). Negative values scroll leftward.
- **`y_speed`** (`pxt.Float`): Vertical scroll speed in pixels per second. Positive values scroll downward. Negative values scroll
    upward.
- **`x_start`** (`pxt.Int`): Initial horizontal offset of the viewport in pixels.
- **`y_start`** (`pxt.Int`): Initial vertical offset of the viewport in pixels.
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A new video with the scrolling effect applied. Output dimensions are `w` x `h`.

**Examples:**

Pan rightward across a 1920x1080 video using a 1280-pixel-wide viewport, scrolling at 50 px/s:

```python
tbl.select(tbl.video.scroll(w=1280, x_speed=50)).collect()
```

Pan rightward across the full range of a 1920x1080 video in exactly its duration. The viewport is
1280 px wide, so the pan range is 1920 - 1280 = 640 px. For a 10-second video, set
`x_speed = 640 / 10 = 64`:

```python
tbl.select(tbl.video.scroll(w=1280, x_speed=64)).collect()
```

Pan leftward across a 1920x1080 video, starting from the right edge:

```python
tbl.select(tbl.video.scroll(w=1280, x_start=640, x_speed=-64)).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; segment_video()

```python Signature
@pxt.udf
segment_video(
    video: pxt.Video,
    *,
    duration: pxt.Float | None = None,
    segment_times: pxt.Json[(Float = None, mode: pxt.String = 'accurate', video_encoder: pxt.String | None = None, video_encoder_args: pxt.Json | None = None) -> pxt.Json[(String, ...
) ]
```

Split a video into segments.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video file to segment
- **`duration`** (`pxt.Float | None`): Duration of each segment (in seconds). For `mode='fast'`, this is approximate;
    for `mode='accurate'`, segments will have exact durations. Cannot be specified together with
    `segment_times`.
- **`segment_times`** (`pxt.Json[(Float`): List of timestamps (in seconds) in video where segments should be split. Note that these are not
    segment durations. If all segment times are less than the duration of the video, produces exactly
    `len(segment_times) + 1` segments. Cannot be empty or be specified together with `duration`.
- **`mode`** (`Any`): Segmentation mode:
    - `'fast'`: Quick segmentation using stream copy (splits only at keyframes, approximate durations)
    - `'accurate'`: Precise segmentation with re-encoding (exact durations, slower)
- **`video_encoder`** (`Any`): Video encoder to use. If not specified, uses the default encoder for the current platform.
    Only available for `mode='accurate'`.
- **`video_encoder_args`** (`Any`): Additional arguments to pass to the video encoder. Only available for `mode='accurate'`.

**Returns:**

- `pxt.Json[(String, ...)]`: List of file paths for the generated video segments.

**Examples:**

Split a video at 1 minute intervals using fast mode:

```python
tbl.select
    segment_paths=tbl.video.segment_video(
        duration=60, mode='fast'
    )
).collect()
```

Split video into exact 10-second segments with default accurate mode, using the libx264 encoder with a CRF of 23
and slow preset (for smaller output files):

```python
tbl.select(
    segment_paths=tbl.video.segment_video(
        duration=10,
        video_encoder='libx264',
        video_encoder_args={'crf': 23, 'preset': 'slow'},
    )
).collect()
```

Split video into two parts at the midpoint:

```python
duration = tbl.video.get_duration()
tbl.select(
    segment_paths=tbl.video.segment_video(segment_times=[duration / 2])
).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; speed()

```python Signature
@pxt.udf
speed(
    video: pxt.Video,
    *,
    factor: pxt.Float,
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Change the playback speed of a video using ffmpeg's setpts filter.

A factor of 2.0 doubles the speed (halves the duration); a factor of 0.5 halves the speed (doubles the duration).
Audio pitch is preserved using ffmpeg's `atempo` filter.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`factor`** (`pxt.Float`): Speed multiplier. Must be positive. Values > 1.0 speed up, values < 1.0 slow down.
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A new video with the adjusted playback speed.

**Examples:**

Double the speed:

```python
tbl.select(tbl.video.speed(factor=2.0)).collect()
```

Half speed (slow motion):

```python
tbl.select(tbl.video.speed(factor=0.5)).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; with_audio()

```python Signature
@pxt.udf
with_audio(
    video: pxt.Video,
    audio: pxt.Audio,
    *,
    video_start_time: pxt.Float = 0.0,
    video_duration: pxt.Float | None = None,
    audio_start_time: pxt.Float = 0.0,
    audio_duration: pxt.Float | None = None
) -> pxt.Video
```

Creates a new video that combines the video stream from `video` and the audio stream from `audio`.
The `start_time` and `duration` parameters can be used to select a specific time range from each input.
If the audio input (or selected time range) is longer than the video, the audio will be truncated.


__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`audio`** (`pxt.Audio`): Input audio.
- **`video_start_time`** (`pxt.Float`): Start time in the video input (in seconds).
- **`video_duration`** (`pxt.Float | None`): Duration of video segment (in seconds). If None, uses the remainder of the video after
    `video_start_time`. `video_duration` determines the duration of the output video.
- **`audio_start_time`** (`pxt.Float`): Start time in the audio input (in seconds).
- **`audio_duration`** (`pxt.Float | None`): Duration of audio segment (in seconds). If None, uses the remainder of the audio after
    `audio_start_time`. If the audio is longer than the output video, it will be truncated.

**Returns:**

- `pxt.Video`: A new video file with the audio track added.

**Examples:**

Add background music to a video:

```python
tbl.select(tbl.video.with_audio(tbl.music_track)).collect()
```

Add audio starting 5 seconds into both files:

```python
tbl.select(
    tbl.video.with_audio(
        tbl.music_track, video_start_time=5.0, audio_start_time=5.0
    )
).collect()
```

Use a 10-second clip from the middle of both files:

```python
tbl.select(
    tbl.video.with_audio(
        tbl.music_track,
        video_start_time=30.0,
        video_duration=10.0,
        audio_start_time=15.0,
        audio_duration=10.0,
    )
).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; zoom()

```python Signature
@pxt.udf
zoom(
    video: pxt.Video,
    *,
    start_scale: pxt.Float = 1.0,
    end_scale: pxt.Float = 1.3,
    center: pxt.Json[(Float = None, video_encoder: pxt.String | None = None, video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Apply a smooth zoom effect over the duration of a video using ffmpeg's zoompan filter.

The zoom factor interpolates linearly from `start_scale` to `end_scale`. The effect works by computing a crop
region at each frame (centered on `center`) and scaling it back to the original resolution. Output dimensions
match the input.

- `start_scale < end_scale`: zoom in (frame progressively tightens)
- `start_scale > end_scale`: zoom out (frame progressively widens)
- `start_scale == end_scale`: static zoom (constant crop, no animation)

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`video`** (`pxt.Video`): Input video.
- **`start_scale`** (`pxt.Float`): Zoom factor at the start of the video. Must be >= 1.0.
- **`end_scale`** (`pxt.Float`): Zoom factor at the end of the video. Must be >= 1.0.
- **`center`** (`pxt.Json[(Float`): Zoom center as `[x, y]` in normalized coordinates (0.0 to 1.0), where `[0.5, 0.5]` is the frame
    center. If None, defaults to `[0.5, 0.5]`.
- **`video_encoder`** (`Any`): Video encoder to use. If not specified, uses the default encoder for the current platform.
- **`video_encoder_args`** (`Any`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A new video with the zoom effect applied. Output resolution matches the input.

**Examples:**

Zoom in (default, 1.0x to 1.3x centered):

```python
tbl.select(tbl.video.zoom()).collect()
```

Zoom out from 2x to 1x:

```python
tbl.select(tbl.video.zoom(start_scale=2.0, end_scale=1.0)).collect()
```

Zoom in toward the upper-left quadrant:

```python
tbl.select(tbl.video.zoom(end_scale=1.5, center=[0.25, 0.25])).collect()
```

Static 1.5x zoom (no animation):

```python
tbl.select(tbl.video.zoom(start_scale=1.5, end_scale=1.5)).collect()
```

